kubernetes/apps/home-automation/zwave-js-ui/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: zwave-js
  namespace: home-automation
spec:
  parentRefs:
    - name: cilium-admin-ingressgateway
      namespace: ingress
  hostnames: ["zwavejs.${DOMAIN}"]
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: zwave-js
          port: 8091
          weight: 1
