kubernetes/apps/home-automation/zwave-js-ui/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwavejs
  namespace: home-automation
spec:
  ingressClassName: nginx
  rules:
  - host: "zwavejs.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: zwave-js-ui
            port:
              number: 8091
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "zwavejs.${DOMAIN}"
